feat:working on progress bar

--- a/style.css
+++ b/style.css
@@ -56,13 +56,16 @@ h1 {
   min-width: auto;
   display: flex;
   flex-flow: column;
-  justify-content: center;
+  /* justify-content: center; */
   height: 3em;
-  margin: 2em auto;
+  margin: 1em auto;
+  .progress-text{
+    margin:0;
+  }
   .progress-bar {
     width: auto;
-    background-color: rgba(0, 0, 0, 0.5);
     height: 1em;
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 1.5em;
     color: white;
     position: relative;
@@ -70,7 +73,6 @@ h1 {
     flex-flow: row;
     align-items:center;
     .progress-percentage{
-      content: "";
       position: absolute;
       display: flex;
       flex-flow:row;
